<resources>
    <string name="app_name">College App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="birthday">Birthday:</string>
    <string name="profile">Profile:</string>
    <string name="siblings">Siblings:</string>
    <string name="relationship">Relationship:</string>
    <string name="age">Age</string>
    <string name="occupation">Occupation:</string>
    <string name="guardians">Guardians:</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_login">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
</resources>
